"Located In", text for making changing hierarchy clearer, fixed horizontal alignment

--- a/src/app/components/modify-hierarchy/modify-hierarchy.component.css
+++ b/src/app/components/modify-hierarchy/modify-hierarchy.component.css
@@ -39,3 +39,11 @@ mat-tree{
   flex-wrap: nowrap;
   overflow-x: auto !important;
 }
+
+h3 {
+  margin: 1rem calc(1.5vw) 0 calc(1.5vw);
+}
+
+.parentButtonHolder {
+  padding-bottom: 0.2rem;
+}
